--- a/templates/teachers/teacher.html
+++ b/templates/teachers/teacher.html
@@ -15,15 +15,14 @@
     <section id="team" class="team section-bg">
       <div class="container">
 
-
-          <p class="mb-4">
+          <p class="mb-2">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
               Filter options &#8681;
             </button>
-          </p>
+          </p> 
           <div class="collapse" id="collapseExample">
-            <div class="card card-body mb-3">
-<form method="GET" class="mb-3">
+            <div class="card card-body mb-3 ">
+                <form method="GET" class="mb-3" class="form-inline">
         
                   {{teacher_filter.form | crispy}}
           
